# bzstruct

./: Makefile  README.md  bzstruct.c  bzstruct.h  bzstruct_cjson.c  bzstruct_macro.h  demon.c  meson.build  meson_options.txt
